// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.client.grpcclient";

package matrixlibrary;

service MatrixService{
  rpc multiplyBlock (MatrixRequest) returns (MatrixResponse) {}
  rpc addBlock (MatrixRequest) returns (MatrixResponse) {}
}

message MatrixRequest {
  Matrix A = 1;
  Matrix B = 2;
}

message Matrix {
  int32 c00 = 1;
  int32 c01 = 2;
  int32 c10 = 3;
  int32 c11 = 4;
}

message MatrixResponse {
  Matrix C = 1;
}

